[gd_scene load_steps=10 format=3 uid="uid://dpde1isc8edvo"]

[ext_resource type="Script" path="res://nmi_penta_.gd" id="1_tqfs1"]
[ext_resource type="Texture2D" uid="uid://b5abtycvr7elx" path="res://assets/nmi/penta03.png" id="2_adxg4"]
[ext_resource type="Texture2D" uid="uid://b5xp7isu4vgo5" path="res://assets/explosion.png" id="3_646rd"]
[ext_resource type="AudioStream" uid="uid://duyjb0gwxaybm" path="res://assets/expl.wav" id="4_joiho"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ks3v1"]
radius = 42.0476

[sub_resource type="RectangleShape2D" id="RectangleShape2D_026xw"]
size = Vector2(277.5, 169)

[sub_resource type="Animation" id="Animation_mw8jx"]
resource_name = "alive"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_adxg4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_h4piw"]
resource_name = "death"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_646rd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e8bxb"]
_data = {
"alive": SubResource("Animation_mw8jx"),
"death": SubResource("Animation_h4piw")
}

[node name="NMIpenta" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_tqfs1")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_adxg4")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ks3v1")

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2(-67.25, 0)
shape = SubResource("RectangleShape2D_026xw")

[node name="Rayfolder" type="Node2D" parent="."]

[node name="FrontLeft" type="RayCast2D" parent="Rayfolder"]
target_position = Vector2(-7, -39)

[node name="FrontRight" type="RayCast2D" parent="Rayfolder"]
target_position = Vector2(7, -42)

[node name="Left" type="RayCast2D" parent="Rayfolder"]
target_position = Vector2(-27, -6)

[node name="Right" type="RayCast2D" parent="Rayfolder"]
position = Vector2(1, -8)
target_position = Vector2(27, -6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e8bxb")
}

[node name="Timer" type="Timer" parent="."]

[node name="sndExplode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_joiho")
volume_db = -16.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
